--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "run": "nodemon server.js"
+    "dev-start": "nodemon server.js"
   },
   "license": "MIT",
   "dependencies": {
     "axios": "^1.6.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ethers": "^5.4.7",
     "express": "^4.18.2"
   }
 }
